samples/_failures_safe/1761546665_3c7889_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8aa31734.c: In function ‘print_state’:
./samples/SAFE/__tmp_8aa31734.c:160:56: error: expected ‘]’ at end of input
  160 |         printf("Current state: %s\n", state_names[state
      |                                                        ^
      |                                                        ]
./samples/SAFE/__tmp_8aa31734.c:160:9: error: expected declaration or statement at end of input
  160 |         printf("Current state: %s\n", state_names[state
      |         ^~~~~~
./samples/SAFE/__tmp_8aa31734.c:160:9: error: expected declaration or statement at end of input
